# skillsmith

./: .env.example  .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: publish-npm.md  release.md
examples/city-transit-control-api-skills/: SKILL.md
examples/city-transit-control-api-skills/groups/: api-key-cookie.SKILL.md  api-key-header.SKILL.md  basic-auth.SKILL.md  (+4 more)
examples/fastapi_auth_demo/: .gitignore  README.md  app.py  export_openapi.py  pyproject.toml
src/: cli.ts  config.ts  types.ts  user-config.ts
src/cli/: parse-args.ts  progress.ts
src/ir/: build-ir.ts  ir-types.ts
src/llm/: client.ts  mock.ts  prompts.ts
src/openapi/: load-spec.ts  normalize-spec.ts  resolve-refs.ts  validate-spec.ts
src/overrides/: merge-overrides.ts
src/pipeline/: generate-segmented-skill.ts  generate-skill.ts
src/render/: render-skillmd.ts
src/segment/: build-segments.ts  schema-closure.ts  segment-types.ts
src/validate/: secret-leak.ts  validate-index-output.ts  validate-output.ts  validate-server-urls.ts
test/: build-ir.test.mjs  cli.integration.test.mjs  load-spec-url.test.mjs  schema-closure.test.mjs  secret-leak.test.mjs  snapshots.integration.test.mjs  validate-output.test.mjs
test/fixtures/: auth-one-op.openapi.json  letztennis.openapi.json  one-op.openapi.json  sample.openapi.json  schema-ref.openapi.json  segmented-tags.openapi.json
test/golden/: letztennis.ir.json  letztennis.prompt.txt  one-op.SKILL.md  sample.SKILL.md
(+2 files in other folders)
