[project]
name = "fastapi-auth-demo"
version = "0.1.0"
description = "FastAPI auth demo for OpenAPI-to-SKILL.md testing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9,<1",
]

[tool.uv]
dev-dependencies = []
